Update cascader.css to fix visibility issue
Remove z-index from .el-cascader .el-input, .el-cascader .el-input__inner so that selected value will not be hidden underneath the .el-input.
See jsfiddle - https://jsfiddle.net/8L0L1rb4/1/

--- a/packages/theme-default/src/cascader.css
+++ b/packages/theme-default/src/cascader.css
@@ -13,7 +13,6 @@
     .el-input__inner {
       cursor: pointer;
       background-color: #fff;
-      z-index: var(--index-normal);
     }
 
     .el-input__icon {
